force-app/main/default/objects/custom_create5__c/custom_create5__c.object-meta.xml
<CustomObject>
    <label>Custom created object5</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects5</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>