force-app/main/default/objects/custom_create5__c/fields/custom_create_5field554__c.field-meta.xml
<CustomField>
    <fullName>custom_create_5field554__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 5field554</label>
    <type>Checkbox</type>
</CustomField>